@@ -10,6 +10,10 @@
 * Add `--exclude-editable` to ``pip freeze`` to exclude editable packages
   from installed package list.
 
+* Add `--progress-bar <progress_bar>` to ``pip download``, ``pip install``
+  and ``pip wheel`` to suppress progress bar in the console (:pull:`4194`)
+
+
 **9.0.1 (2016-11-06)**
 
 * Correct the deprecation message when not specifying a --format so that it
